--- a/WpfApp1/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1/WpfApp1.csproj
@@ -9,7 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="ReactiveProperty" Version="9.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AAAEntity\AAAEntity.csproj" />
+    <ProjectReference Include="..\BBBEntity\BBBEntity.csproj" />
+    <ProjectReference Include="..\DomainService\DomainService.csproj" />
+    <ProjectReference Include="..\Usecase\Usecase.csproj" />
   </ItemGroup>
 
 </Project>
