--- a/WpfApp1/UI/UI.csproj
+++ b/WpfApp1/UI/UI.csproj
@@ -1,15 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="ReactiveProperty" Version="9.5.0" />
   </ItemGroup>
 
@@ -17,9 +15,6 @@
     <ProjectReference Include="..\AAAEntity\AAAEntity.csproj" />
     <ProjectReference Include="..\BBBEntity\BBBEntity.csproj" />
     <ProjectReference Include="..\DomainService\DomainService.csproj" />
-    <ProjectReference Include="..\InMemoryRepository\InMemoryRepository.csproj" />
-    <ProjectReference Include="..\Repository\Repository.csproj" />
-    <ProjectReference Include="..\UI\UI.csproj" />
     <ProjectReference Include="..\Usecase\Usecase.csproj" />
   </ItemGroup>
 
